# guard-bands

./: .env.example  .env.production.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Guard-Bands-Paper.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  debug_test.py  demo_llm_attack.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_manual.py
.github/: CODEOWNERS  dependabot.yml
RELEASE_NOTES/: v0.1.0-poc.md  v0.2.0-poc.md  v0.3.0-poc.md  v0.3.1-poc.md  v0.4.0-poc.md  v0.5.0-poc.md  v0.6.0-poc.md  v0.7.0-poc.md
app/: audit.py  authorization.py  config.py  cost.py  crypto.py  llm.py  main.py  models.py  replay.py  secrets_provider.py
deploy/: Caddyfile  docker-compose.dual-channel.yml  docker-compose.prod.yml
docs/: AGENTDOJO_HARNESS.md  AGENTDOJO_RESULTS.md  API_EXAMPLES.md  ARCHITECTURE.md  AUTHORIZATION.md  CONTEXT_SERIALIZATION.md  COST_GUARD.md  DEMO.md  DUAL_CHANNEL.md  EVALUATION.md  INTEGRATIONS.md  KEY_MANAGEMENT.md  LIMITS.md  OWASP_LLM_COVERAGE.md  PRODUCTION_DEPLOYMENT.md  PYTHON_SDK.md  REFERENCE_APP.md  REPLAY_PROTECTION.md  SECRETS.md
dual_channel/: __init__.py  control_plane.py  data_plane.py
examples/: sdk_dual_channel.py  sdk_quickstart.py
guardbands_sdk/: __init__.py  client.py  errors.py  models.py
integrations/: __init__.py  fastapi_guard.py  rag_middleware.py
keycloak/: realm-export.json
reference_app/: __init__.py  support_app.py
scripts/: benchmark_parser.py  dual_channel_demo.py  evaluate_agentdojo_style.py  fastapi_demo.py  redteam_control_plane.py  reference_app_demo.py  run_agentdojo_benchmark.py
tests/: conftest.py  (+14 more)
(+10 files in other folders)
