[project]
name = "guard-bands"
version = "0.3.0"
description = "Cryptographic boundaries for separating untrusted LLM content from trusted instructions and tool execution."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
dependencies = [
  "anthropic==0.111.0",
  "asyncpg==0.31.0",
  "cryptography==49.0.0",
  "fastapi==0.138.0",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "requests==2.34.2",
  "slowapi==0.1.10",
  "uvicorn[standard]==0.49.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "hypothesis==6.155.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

