[project]
name = "guard-bands"
version = "0.6.0"
description = "Cryptographic boundaries for separating untrusted LLM content from trusted instructions and tool execution."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
dependencies = [
  "anthropic==0.116.0",
  "asyncpg==0.31.0",
  "cryptography==49.0.0",
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "requests==2.34.2",
  "slowapi==0.1.10",
  "uvicorn[standard]==0.50.0",
]

[project.optional-dependencies]
# Optional secrets backends — installed only when needed so the base image
# stays light. Use SECRETS_BACKEND=aws|vault to activate.
aws = [
  "boto3>=1.34,<2",
]
vault = [
  "hvac>=2.1,<3",
]
dev = [
  "pytest==9.1.1",
  "hypothesis==6.156.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
